# cmb-protocol

./: .gitignore  Makefile  README.md  raptorq_evaluation.py  requirements.txt  simulator_installation.make
capnp/: hello.capnp
cmb_protocol/: __main__.py  client.py  coding.py  connection.py  constants.py  helpers.py  log_util.py  packets.py  sequence_number.py  server.py  tfrc.py  timestamp.py  trio_util.py
cmb_protocol/packets/: __init__.py  ack.py  data.py  nack.py  packet.py  request_resource.py  resource_request.py
docs/: cli.md  packets.md
raptorq/: Cargo.toml
raptorq/src/: lib.rs
src/: client.py  server.py
src/packets/: __init__.py  hello.py  packet.py  resource_request.py
