[package]
name = "raptorq-py"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "raptorq"
crate-type = ["cdylib"]

[dependencies.raptorq]
git = "https://github.com/felixschorer/raptorq.git"
branch = "fix-trying-to-apply-padding-when-no-padding-is-required"
#version = "0.11.1"

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]